Controllers and integration test (#12)
* Completed all controllers
* Completed all integration tests
* Removed Payment model due to redundancy with Subscription Model
