# back-end/src/docs/swagger.yaml
@@ -10,8 +10,6 @@ tags:
   description: Lists management
 - name: Subscriptions
   description: Subscriptions management
-- name: Payments
-  description: Payments management
 - name: Movies
   description: Search movies, get movie details, get movie links, and movie management
 paths:
@@ -60,6 +58,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        "409":
+          description: A user with the same email already exists
         "400":
           description: The request is invalid
   /users/:uuid:
@@ -80,8 +80,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-        "400":
-          description: The request is invalid
+        "404":
+          description: The user does not exist
     put:
       tags:
       - User
@@ -187,8 +187,8 @@ paths:
                   list:
                     type: array
                     $ref: "#/components/schemas/List"
-        "400":
-          description: The request is invalid
+        "404":
+          description: The user does not exist
   /users/:uuid/lists:
     get:
       tags:
@@ -209,6 +209,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/List"
+        "404":
+          description: The user does not exist
         "400":
           description: The request is invalid
   /users/:uuid/subscriptions:
@@ -231,6 +233,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Subscription"
+        "404":
+          description: The user does not exist
         "400":
           description: The request is invalid
   /lists/:userUUID:
@@ -253,6 +257,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/List"
+        "404":
+          description: The user does not exist
         "400":
           description: The request is invalid
     post:
@@ -297,19 +303,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/List"
+        "409":
+          description: A list with that name already exists
+        "404":
+          description: The user does not exist
         "400":
           description: The request is invalid
-  /lists/:userUUID/:listUUID:
+  /lists/:listUUID:
     get:
       tags:
       - Lists
-      summary: Get a list by user uuid and list uuid
+      summary: Get a list by list uuid
       parameters:
-        - name: userUUID
-          in: path
-          required: true
-          schema:
-            type: string
         - name: listUUID
           in: path
           required: true
@@ -322,18 +327,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/List"
+        "404":
+          description: The list does not exist
         "400":
           description: The request is invalid
     put:
       tags:
       - Lists
-      summary: Update a list by user uuid and list uuid
+      summary: Update a list by list uuid
       parameters:
-        - name: userUUID
-          in: path
-          required: true
-          schema:
-            type: string
         - name: listUUID
           in: path
           required: true
@@ -366,18 +368,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/List"
+        "404":
+          description: The list does not exist
         "400":
           description: The request is invalid
     delete:
       tags:
       - Lists
-      summary: Delete a list by user uuid and list uuid
+      summary: Delete a list by list uuid
       parameters:
-        - name: userUUID
-          in: path
-          required: true
-          schema:
-            type: string
         - name: listUUID
           in: path
           required: true
@@ -390,13 +389,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/List"
+        "404":
+          description: The list does not exist
         "400":
           description: The request is invalid
   /movies:
     get:
       tags:
       - Movies
-      summary: Get all movies
+      summary: Get all movies from database
       responses:
         "200":
           description: A successful response
@@ -444,11 +445,6 @@ paths:
                   items:
                     type: string
                     example: Drama
-                director:
-                  type: array
-                  items:
-                    type: string
-                    example: Stefano Sollima
                 cast:
                   type: array
                   items:
@@ -463,32 +459,25 @@ paths:
                 $ref: "#/components/schemas/Movie"
         "400":
           description: The request is invalid
-  /movies/search?query=:query:
+  /movies/search?query=:toSearch:
     get:
       tags:
       - Movies
       summary: Search movies
+      description: Search by title, genre, actor or year. If you want to search by multiple fields, separate them by comma.
       parameters:
         - name: query
+          in: path
+          required: true
+          schema:
+            type: string
+            example: title, genre, actor, year
+        - name: toSearch
           in: query
           required: true
           schema:
             type: string
-        - name: title
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: genre
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: actor
-          in: query
-          required: false
-          schema:
-            type: string
+            example: Without Remorse
       responses:
         "200":
           description: A successful response
@@ -653,6 +642,118 @@ paths:
                 $ref: '#/components/schemas/Movie'
         "400":
           description: The request is invalid
+  /subscription/:subscriptionUUID:
+    get:
+      tags:
+        - Subscriptions
+      summary: Get a subscription
+      description: Get a subscription
+      operationId: getSubscription
+      parameters:
+        - name: subscriptionUUID
+          in: path
+          description: Subscription UUID
+          required: true
+          schema:
+            type: string
+            example: "5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f"
+      responses:
+        "200":
+          description: Subscription
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        "404":
+          description: Subscription not found
+        "400":
+          description: The request is invalid
+    put:
+      tags:
+        - Subscriptions
+      summary: Update a subscription
+      description: Update a subscription
+      operationId: updateSubscription
+      parameters:
+        - name: subscriptionUUID
+          in: path
+          description: Subscription UUID
+          required: true
+          schema:
+            type: string
+            example: "5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f"
+        - name: body
+          in: body
+          description: Subscription
+          required: true
+          schema:
+            $ref: '#/components/schemas/Subscription'
+      responses:
+        "200":
+          description: Subscription
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        "404":
+          description: Subscription not found
+        "400":
+          description: The request is invalid
+    delete:
+      tags:
+        - Subscriptions
+      summary: Delete a subscription
+      description: Delete a subscription
+      operationId: deleteSubscription
+      parameters:
+        - name: subscriptionUUID
+          in: path
+          description: Subscription UUID
+          required: true
+          schema:
+            type: string
+            example: "5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f"
+      responses:
+        "200":
+          description: Subscription
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        "404":
+          description: Subscription not found
+        "400":
+          description: The request is invalid
+  /subscription/:userUUID:
+    post:
+      tags:
+        - Subscriptions
+      summary: Create a subscription
+      description: Create a subscription
+      operationId: createSubscription
+      parameters:
+        - name: userUUID
+          in: path
+          description: User UUID
+          required: true
+          schema:
+            type: string
+            example: "5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f"
+        - name: body
+          in: body
+          description: Subscription
+          required: true
+          schema:
+            $ref: '#/components/schemas/Subscription'
+      responses:
+        "201":
+          description: Subscription
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        "400":
+          description: The request is invalid
 components:
   schemas:
     User:
@@ -684,27 +785,12 @@ components:
           example: 2022-03-28T02:16:03.133+00:00
         subscription:
           type: string
-          $ref: "#/components/schemas/Subscription"
+          example: 5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f
         list:
           type: array
-          $ref: "#/components/schemas/List"
-    Payment:
-      type: object
-      properties:
-        UUID:
-          type: string
-          format: uuid
-          example: 3fa85f64-5717-4562-b5fc-2c963f66afa6
-        userUUID:
-          type: string
-          format: uuid
-          example: 3fa85f64-5717-4552-b3fc-2c963f66afa6
-        paymentType:
-          type: string
-          enum:
-            - creditCard
-            - paypal
-          example: creditCard
+          items:
+            type: string
+            example: ["5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f", "5e9f8f8f-f8f8-4f8f-8f8f-8f8f8f8f8f8f"]
     Subscription:
       type: object
       properties:
@@ -712,10 +798,12 @@ components:
           type: string
           format: uuid
           example: 3fa85f64-5719-4562-b3fc-2c963f66afa6
-        paymentUUID:
+        paymentType:
           type: string
-          format: uuid
-          example: 3fa85f64-5718-4562-b3fc-2c963f66afa6
+          enum:
+            - credit
+            - debit
+          example: credit
         subscriptionType:
           type: string
           enum:
@@ -784,11 +872,6 @@ components:
           items:
               type: string
               example: Drama
-        director:
-          type: array
-          items:
-              type: string
-              example: Stefano Sollima
         cast:
           type: array
           items:
